--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,28 +80,39 @@
 
 
 
-        <section class="py-6 brands">
-            <div class="container">
-                <h4 class="text-uppercase text-center mb-5">Categories</h4>
-                <!-- Brands Slider-->
-                <div class="row">
-                    <% categories?.forEach((category, index)=> { %>
-                        <div class="col-md-4 mb-4">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title text-center text-muted text-capitalize">
-                                        <a href="#" class="text-decoration-none text-dark"
-                                            style="text-decoration: none; pointer-events: none;">
-                                            <%- category.name %>
-                                        </a>
-                                    </h5>
-                                </div>
-                            </div>
-                        </div>
-                        <% }) %>
+    </section>
+
+
+    <section class="py-6 brands">
+      <div class="container">
+        <% if (categories !== 'undefined') { %>
+          <h4 class="text-uppercase text-center mb-5">Categories</h4>
+          <!-- Brands Slider-->
+          <div class="owl-carousel owl-theme brands-slider">
+            <!-- item-->
+            <% categories?.forEach((category, index) => { %>
+              <div class="item card border-0 d-flex align-items-center justify-content-center">
+                <a href="/shop?category=<%- category._id %>">
+                <div class="w-8rem">
+                  <% if (category.onOffer) { %>
+                    <div class="ribbon ribbon-info">On offer <%- category.offerDiscountRate %>%</div>
+                  <% } %>
+                  
+                  <div class="card-img-overlay d-flex align-items-top">
+                    <div class="w-100 py-3">
+                      <p class="display-3 pt-6 text-center text-white fw-semibold fs-3 text-capitalize"><%- category.name %></p>
+                    </div>
+                  </div>  
+                  </div>
+                </a>
                 </div>
-            </div>
-        </section>
+            <% }) %>
+            
+            
+          </div>
+        <% } %>
+      </div>
+    </section>
 
 
 
