--- a/views/partials/user/sidebar.ejs
+++ b/views/partials/user/sidebar.ejs
@@ -48,7 +48,7 @@
             <ul class="list-unstyled mb-0">
                 <li class="border-bottom mb-0">
                     <a class="nav-link-style d-flex align-items-center px-4 py-3 "
-                        href="#" style="color: #333;">
+                        href="/user/wallet" style="color: #333;">
                         <i class="ci-bag opacity-60 me-2 fs-5"></i>
                             Wallets
                     </a>
