--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -295,7 +295,7 @@
   };
 </script>
 <script defer>
-  const removeFromCart = async (productId, variantId) => {
+  const removeFromCart = async (productId) => {
     Swal.fire({
       title: "Are you sure?",
       text: `This item will be removed from the cart`,
