--- a/views/shop/ProductList.ejs
+++ b/views/shop/ProductList.ejs
@@ -25,7 +25,7 @@
         </div>
         <br>
         <br>
-        <aside class="col-lg-3">
+        <aside class="col-md-3">
             <div class="summary">
                 <h3 class="summary-title">filter</h3>
                 <h6 class="sidebar-heading d-none d-lg-block">Categories</h6>
@@ -77,6 +77,9 @@
             <div class="row justify-content-center py-3 my-3">
         <% products?.forEach(element=> { %>
             <div class="col-md-3  p-2 m-2  text-capitalize card border rounded">
+              <% if (element.onOffer) { %>
+                <div class="ribbon ribbon-info">On offer <%- product.offerDiscountRate %>%</div>
+              <% } %>
                 <img src="/uploads/cropped/<%- element.images.image1 %>" alt="<%- element.product_name %>"
                     class="img-fluid">
 
@@ -91,8 +94,14 @@
                 <div class="py-2">
                 <p class="h4 card-title"><%- element.product_name %></p>
                 <div class="card-body">
+                  <% if (!element.onOffer) { %>
                     <p class="lead card-text">₹ <%- element.sellingPrice %></p>
                     <p class="lead card-text"><del><%- element.actualPrice %></del></p>
+                    <% } else { %>   
+                      <span class="text-muted col">₹<%- element.offerDiscountPrice %></span>
+                      <span class="text-muted col"><del>₹<%- element.sellingPrice %></del></span>
+                  <% } %>
+                  <br />
                     </div>
                 </div>
                 <div class="card-footer justify-content-center">
@@ -103,6 +112,7 @@
             <% }) %>
             </div>
     </div>  <!-- / Grid End-->
+    
 
     
               
