--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -31,79 +31,82 @@
                     </div>
                     </div>
                     </div>
-                    <!-- update form-->
-          <form id="update-form" action="/user/profile" method="POST">
-            <div class="bg-secondary-subtle rounded-3 p-4 mb-4">
-            <div class="row gx-4 gy-3">
-              <div class="col-sm-6">
-                <label class="form-label" for="account-fn">First Name</label>
-                <input name="firstName" class="form-control" type="text" id="account-fn" value="<%- user.firstName %>">
-                <small></small>
-              </div>
-              <div class="col-sm-6">
-                <label class="form-label" for="account-ln">Last Name</label>
-                <input name="lastName" class="form-control" type="text" id="account-ln" value="<%- user.lastName %>">
-                <small></small>
-              </div>
-              <div class="col-sm-6">
-                <label class="form-label" for="account-email">Email Address</label>
-                <input class="form-control" type="email" id="account-email" value="<%- user.email %>" disabled>
-              </div>
-              <div class="col-sm-6">
-                <label class="form-label" for="account-phone">Phone Number</label>
-                <input name="phone" class="form-control" type="text" id="account-phone" value="<%- user.phone %>" placeholder=" 9778877665" required>
-                <small></small>
-              </div>
-              <div class="col-12">
-                <hr class="mt-2 mb-3">
-                <div class="d-flex flex-wrap justify-content-between align-items-center">
-                  <button class="btn btn-outline-success m-3 mt-sm-0" type="submit">Save profile</button>
-                </div>
-              </div>
-            </div>
-          </form>
-
-
-          <!-- Change Password Form --> 
-<form action="/user/reset-password" method="POST" id="reset-password-form">
-  <div class="container border rounded-3 p-4 mb-4" style="background-color: #f8f9fa;">
-    <h4>Change Password</h4>
-    <hr class="my-4">
-    <div class="col px-5 mx-5">
-      <div class="col-md-12  mb-5 form-group">
-        <div class="d-flex align-items-center">
-          <label class="form-label" for="oldPassword">Old Password</label>
-          <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Old Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
-          <i class="bi bi-eye-slash" id="toggleOldPassword" style="position: relative;z-index: 8; left: -30px; width: 0%; cursor: pointer;"></i>
-        </div>
-        <small></small>
-      </div>
-      <div class="row">
-        <div class="col-md-6 mb-3 form-group">
-          <div class="d-flex align-items-center">
-            <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="New Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
-            <i class="bi bi-eye-slash" id="toggleNewPassword" style="position: relative;z-index: 8; left: -30px; width: 0%; cursor: pointer;"></i>
-          </div>
-          <small></small>
-        </div>
-        <div class="col-md-6 mb-3 form-group">
-          <div class="d-flex align-items-center">
-            <input type="password" class="form-control password" id="confirmNewPassword" name="confirmNewPassword" placeholder="Confirm New Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Confirm New Password'">
-            <i class="bi bi-eye-slash" id="toggleNewPasswordConfirm" style="position: relative;z-index: 8; left: -30px; width: 0%; cursor: pointer;"></i>
-          </div>
-          <small></small>
-        </div>
-      </div>
-    </div>
-    <div class="col-12">
-      <hr class="mt-2 mb-3">
-      <div class="d-flex flex-wrap justify-content-between align-items-center">
-        <!-- <button class="btn btn-outline-primary m-3 mt-sm-0" type="button">Update profile</button> -->
-        <button class="btn btn-outline-success m-3 mt-sm-0" type="submit">Change Password</button>
-      </div>
-    </div>
-  </div>
-</form>
+                    <div class="row">
+                      <!-- Update Profile Form -->
+                      <div class="col-md-6">
+                        <form id="update-form" action="/user/profile" method="POST">
+                          <div class="card bg-light rounded-3 p-4 mb-4">
+                            <h4 class="card-title mb-4">Update Profile</h4>
+                            <div class="mb-3">
+                              <label class="form-label" for="account-fn">First Name</label>
+                              <input name="firstName" class="form-control" type="text" id="account-fn" value="<%- user.firstName %>">
+                              <small></small>
+                            </div>
+                            <div class="mb-3">
+                              <label class="form-label" for="account-ln">Last Name</label>
+                              <input name="lastName" class="form-control" type="text" id="account-ln" value="<%- user.lastName %>">
+                              <small></small>
+                            </div>
+                            <div class="mb-3">
+                              <label class="form-label" for="account-email">Email Address</label>
+                              <input class="form-control" type="email" id="account-email" value="<%- user.email %>" disabled>
+                            </div>
+                            <div class="mb-3">
+                              <label class="form-label" for="account-phone">Phone Number</label>
+                              <input name="phone" class="form-control" type="text" id="account-phone" value="<%- user.phone %>" placeholder="9778877665" required>
+                              <small></small>
+                            </div>
+                            <hr class="mt-4 mb-3">
+                            <div class="d-grid">
+                              <button class="btn btn-success" type="submit">Save Profile</button>
+                            </div>
+                          </div>
+                        </form>
+                      </div>
+                    
+                      <!-- Change Password Form -->
+                      <div class="col-md-6">
+                        <form action="/user/reset-password" method="POST" id="reset-password-form">
+                          <div class="card bg-light rounded-3 p-4 mb-4">
+                            <h4 class="card-title mb-4">Change Password</h4>
+                            <div class="mb-3">
+                              <label class="form-label" for="oldPassword">Old Password</label>
+                              <div class="input-group">
+                                <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Old Password">
+                                <button class="btn btn-outline-secondary" type="button" id="toggleOldPassword">
+                                  <i class="bi bi-eye-slash"></i>
+                                </button>
+                              </div>
+                              <small></small>
+                            </div>
+                            <div class="mb-3">
+                              <label class="form-label" for="newPassword">New Password</label>
+                              <div class="input-group">
+                                <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="New Password">
+                                <button class="btn btn-outline-secondary" type="button" id="toggleNewPassword">
+                                  <i class="bi bi-eye-slash"></i>
+                                </button>
+                              </div>
+                              <small></small>
+                            </div>
+                            <div class="mb-3">
+                              <label class="form-label" for="confirmNewPassword">Confirm New Password</label>
+                              <div class="input-group">
+                                <input type="password" class="form-control" id="confirmNewPassword" name="confirmNewPassword" placeholder="Confirm New Password">
+                                <button class="btn btn-outline-secondary" type="button" id="toggleNewPasswordConfirm">
+                                  <i class="bi bi-eye-slash"></i>
+                                </button>
+                              </div>
+                              <small></small>
+                            </div>
+                            <hr class="mt-4 mb-3">
+                            <div class="d-grid">
+                              <button class="btn btn-success" type="submit">Change Password</button>
+                            </div>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
 
         </div>
       </div>
