--- a/views/user/refferals.ejs
+++ b/views/user/refferals.ejs
@@ -1,14 +1,116 @@
+
 <section>
-    <div class="container">
-      <!-- Breadcrumbs -->
-      <ol class="breadcrumb justify-content-center">
-        <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <!-- <li class="breadcrumb-item"><a href="/user/profile">Account</a></li> -->
-        <li class="breadcrumb-item active">Refferals</li>
-      </ol>
-      <!-- Hero Content-->
-      <div class="hero-content pb-5 text-center">
-        <h1 class="hero-heading">Your Refferals</h1>
-      </div>
+  <div class="container">
+    <!-- Breadcrumbs -->
+    <ol class="breadcrumb justify-content-center">
+      <li class="breadcrumb-item"><a href="/">Home</a></li>
+      <li class="breadcrumb-item"><a href="/user/profile">Account</a></li>
+      <li class="breadcrumb-item active">Refferals</li>
+    </ol>
+    <!-- Hero Content-->
+    <div class="hero-content pb-5 text-center">
+      <h1 class="hero-heading">Your Refferals</h1>
     </div>
-  </section>
+  </div>
+</section>
+
+
+
+<div class="container mb-5">
+
+  <div class="row">
+    <%- include('../partials/user/sidebar.ejs') %>
+    <!-- Content  -->
+    <section class="col-lg-8">
+      <div id="accordion" role="tablist">
+
+        <div class="block mb-1">
+          <div class="block-header bg-secondary-light pb-1" id="refferalDetails" role="tab"><strong><a class="accordion-link collapsed" data-bs-toggle="collapse" href="#refferalCollapse" aria-expanded="false" aria-controls="refferalCollapse">Your Refferal Details</a></strong>
+            <p class="text-muted"></p>
+          </div>
+          <div class="collapse show" id="refferalCollapse" role="tabpanel" aria-labelledby="refferalDetails" data-parent="#accordion">
+            <div class="block-body row">
+              <div class="d-flex">
+                <p class="lead bg-success-light fw-semibold text-muted  p-2">Your Refferal Code: <span class="text-dark fw-bold" id="refferalCode"><%- refferalCode %></span></p>
+                <p class="lead bg-success-light fw-semibold text-muted text-uppercase p-2">Refferal Rewards: <%- user.refferalRewards ? user.refferalRewards : 0 %></p>
+                <p class="lead bg-success-light fw-semibold text-muted text-uppercase p-2">Successful Refferals: <%- successfullRefferals ? successfullRefferals.length : 0 %> </p>
+              </div>
+              <div class="">
+                <button type="button" data-clipboard-text="<%- refferalCode %>" id="copyCode" class="btn btn-outline-dark">Copy Code</button>
+                <button type="button" data-clipboard-link="<%- refferalCode %>"  data-bs-toggle="tooltip" data-bs-placement="top"
+                  data-bs-title="Copy to clipboard." id="copyLink" class="btn btn-outline-primary">Copy Refferal Link</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container table-responsive py-10 text-capitalize">
+        <table class="table table-striped table-hover">
+          <thead class="bg-dark-light">
+            <tr>
+              <th scope="col">Date</th>
+              <th scope="col">Username</th>
+              <th scope="col">Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% if (successfullRefferals && successfullRefferals.length !== 0 ) { %>
+            <% successfullRefferals.forEach((element) => { %>
+            <tr class="align-middle table-success">
+              <td><%= element.date.toDateString() %></td>
+              <td><%- element.username %></td>
+              <td><%- element.status %></td>
+            </tr>
+            <% }) %>
+
+            <% } else { %>
+            <tr>
+              <td colspan="4" class="text-center">No refferals yet</td>
+            </tr>
+            <% } %>
+
+          </tbody>
+        </table>
+
+    </section>
+  </div>
+</div>
+
+
+
+<script defer>
+  // copy referral code
+  const copyCode = document.getElementById("copyCode");
+  const copyLink = document.getElementById("copyLink");
+
+  copyCode.addEventListener("click", () => {
+    const copyCodeText = document.getElementById("refferalCode");
+    navigator.clipboard.writeText(copyCodeText.innerText);
+
+    Swal.fire({
+      icon: "success",
+      title: "Success!",
+      text: "Code Copied",
+      showConfirmButton: false,
+      timer: 1000,
+    })
+  });
+
+  copyLink.addEventListener("click", (event) => {
+    const copyCodeText = document.getElementById("refferalCode");
+    const link = `${window.location.origin}/register/?ref=${copyCodeText.innerText}`;
+
+    navigator.clipboard.writeText(link);
+
+
+    Swal.fire({
+      icon: "success",
+      title: "Success!",
+      text: "Link Copied",
+      showConfirmButton: false,
+      timer: 1000,
+    })
+  
+  });
+</script>
